Dark theme: fix header's right control's width
The right control has a fixed width, and so when the dark theme button
is added there, it exceeds this width and overlaps the search bar. This
fixes it.

--- a/src/injections/ccdarktheme.css
+++ b/src/injections/ccdarktheme.css
@@ -56,6 +56,11 @@ body.ec a {
   color: rgba(255, 255, 255, .87)!important;
 }
 
+.material-content > header .right-control {
+  width: auto!important;
+  max-width: none!important;
+}
+
 .material-content > header .bell.mixin {
   fill: rgba(255, 255, 255, .87)!important;
 }
